--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
-                <version>1.0.3.Final</version>
+                <version>1.1.10.Final</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -70,6 +70,7 @@
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
+            <version>1.1.10.Final</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -267,6 +268,11 @@
                     <groupId>org.wildfly.arquillian</groupId>
                     <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <version>2.0.0.Final</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.arquillian.extension</groupId>
+                    <artifactId>arquillian-recorder-reporter-impl</artifactId>
+                    <version>1.0.0.Final</version>
                 </dependency>
             </dependencies>
             <build>
