--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,18 @@
                     <artifactId>arquillian-recorder-reporter-impl</artifactId>
                     <version>1.0.0.Final</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>org.jacoco.core</artifactId>
+                    <version>0.7.4.201502262128</version>
+                    <scope>test</scope>
+                 </dependency>
+                 <dependency>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-jacoco</artifactId>
+                    <version>1.0.0.Alpha8</version>
+                    <scope>test</scope>
+                 </dependency>
             </dependencies>
             <build>
                 <testResources>
@@ -284,6 +296,27 @@
                         <directory>src/test/resources-jbossas-managed</directory>
                     </testResource>
                 </testResources>
+                <plugins>
+                    <plugin>
+                       <groupId>org.jacoco</groupId>
+                       <artifactId>jacoco-maven-plugin</artifactId>
+                       <version>0.7.4.201502262128</version>
+                       <executions>
+                          <execution>
+                             <goals>
+                                <goal>prepare-agent</goal>
+                             </goals>
+                          </execution>
+                          <execution>
+                             <id>report</id>
+                             <phase>prepare-package</phase>
+                             <goals>
+                                <goal>report</goal>
+                             </goals>
+                          </execution>
+                       </executions>
+                    </plugin>
+                 </plugins>
             </build>
         </profile>
         <profile>
